2010-04-11  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Update the URL for ECMA-048 in the documentation.

2010-01-24  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 3.00 released.

	* t/basic.t: Add some basic tests for bright color support.

	* ANSIColor.pm: Reorganize the documentation and be clearer about
	the function interface parameters.  Reword the explanation of
	bright and regular colors, and provide some advice about which to
	use.

2010-01-24  Jakob Ilves  <illvilja@gmail.com>

	* ANSIColor.pm: Add bright versions of the basic eight foreground
	and background colors using the 9x and 10x codes, supported by
	emulators with 16 color support.

2009-08-30  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 2.02 released.

	* ANSIColor.pm: Update compatibility matrix to reflect that xterm
	now supports blink.

	* ANSIColor.pm (colorvalid): New function to check whether an
	attribute is known.
	* t/basic.t: Test colorvalid.

2009-07-04  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add an example of checking color attributes by
	catching exceptions from color() to the documentation.

	* ANSIColor.pm: Add FAINT as a synonym for DARK and export it when
	constants are requested.
	* t/basic.t: Test faint and FAINT as a synonym for dark/DARK.

	* ANSIColor.pm: Version 2.01 released.

	* t/basic.t: Test error handling in color, colored, and uncolor.

	* ANSIColor.pm (uncolor): When reporting errors for bad escape
	sequences, don't include the leading \e[ or trailing m in the
	error message.

	* ANSIColor.pm: Add section headings to the DESCRIPTION section of
	the module since it's getting rather long.
	(colorstrip): New function to remove ANSI color codes from
	strings.  Thanks, Paul Miller.
	* t/basic.t: New tests for colorstrip.

	* ANSIColor.pm (AUTOLOAD): Untaint $AUTOLOAD, required by Perl
	5.10 when running in taint mode.  Thanks, Tim Bellinghausen.
	* t/basic.t: Two new tests for AUTOLOAD error handling.  Enable